@@ -1524,6 +1524,8 @@
 	'S_SERVICES_DOWNTIME_DATE_FORMAT'=>		'l H:i',
 	'S_SERVICES_ONETIME_DOWNTIME_DATE_FORMAT'=>	'd M Y H:i',
 	'S_ADD_SMALL'=>								'add',
+	'S_ERROR_ADDING_SERVICE_TIME'=>'Error adding service time',
+	'S_IS_A_WRONG_TIME_FORMAT'=>'is a wrong time format. Should be from 00:00 to 23:59.',
 
 //	locales.php
 	'S_DO_NOT_ADD'=>			'Do not add',
